# newsd

./: ANNOUNCEMENT  Article.C  Article.H  CHANGES  Configuration.C  Configuration.H  Group.C  Group.H  Makefile.in  README  Server.C  Server.H  config.h.in  configure  configure.in  everything.H  inn2newsd.sh  newsd.C  newsd.conf.in  newsd.conf.pod.in  newsd.list.in  newsd.osx  newsd.plist  newsd.sh.in  newsd.spec  newsd.strings  nntp-help.out
doc/: rfc1036.txt  rfc2980.txt  rfc977.txt
